# Pico-Updated

./: .gitmodules  CMakeLists.txt  Pico.sln  README.md
.github/workflows/: Nightly.yml  ci.yml  nightly.yml
CMake/: gtav-classes.cmake
Source/: CNetGamePlayer.hpp  CrossMapping.cpp  CrossMapping.h  Hooking.cpp  Hooking.h  Log.cpp  Log.h  Main.cpp  MenuClass.cpp  MenuClass.h  NativeCaller.h  NativeInvoker.cpp  NativeInvoker.h  NativeSpoofer.asm  Natives.h  OffsetHandler.h  Pico.vcxproj  Pico.vcxproj.filters  Script.cpp  SignatureScanner.h  Types.h  enums.h  enums.hpp  hooking.hpp  hotkeys.cpp  hotkeys.h  input_hook.cpp  joaat.hpp  keyboard.txt  log.hpp  menu_class.cpp  menu_class.h  menu_class.hpp  misc.hpp  native_caller.h  native_invoker.cpp  native_invoker.h  natives.hpp  net_game_event.hpp  offset_handler.h  (+10 more)
Source/MinHook/lib/: minhook.x64.lib
Source/gta/: net_game_event.hpp
Source/headers/: CrossMapping.h  Hooking.h  MenuClass.h  MenuClass.h.bak  NativeCaller.h  NativeInvoker.h  Natives.h  OffsetHandler.h  ScriptGlobal.h  SignatureScanner.h  Types.h  enums.h  resource.h  stdafx.h
Source/src/: CrossMapping.cpp  Functions.cpp  Hooking.cpp  Log.cpp  Main.cpp  MenuClass.cpp  NativeInvoker.cpp  Script.cpp  stdafx.cpp
Source/src/functions/: Misc.cpp  vehicle.cpp
src/: CMakeLists.txt  Hooking.cpp  Pico.vcxproj  Pico.vcxproj.filters  cpp.hint  crossmapping.cpp  crossmapping.hpp  enums.hpp  functions.hpp  hooking.hpp  input_hook.cpp  input_hook.hpp  ipls.hpp  json_service.cpp  json_service.hpp  key_codes.hpp  key_names.hpp  log.cpp  log.hpp  looped.hpp  looped_vals.hpp  main.cpp  menu_class.cpp  menu_class.hpp  native_invoker.cpp  native_invoker.hpp  natives.hpp  net_game_event.hpp  offset_handler.hpp  peds.hpp  player.hpp  script.cpp  script_global.hpp  self.hpp  self_proofs.cpp  self_proofs.hpp  sessions.hpp  signature_scanner.hpp  stdafx.cpp  stdafx.hpp  (+6 more)
